pkg/provider/kubernetes/ingress/fixtures/Ingress-with-a-basic-rule-on-one-path-with-https-(portname-starts-with-https).yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  namespace: testing

spec:
  rules:
  - http:
      paths:
      - path: /bar
        backend:
          service:
            name: service1
            port:
              number: 8443
        pathType: Prefix

---
kind: Service
apiVersion: v1
metadata:
  name: service1
  namespace: testing

spec:
  ports:
    - name: https-foo
      protocol: ""
      port: 8443
  clusterIP: 10.0.0.1

---
kind: Endpoints
apiVersion: v1
metadata:
  name: service1
  namespace: testing

subsets:
  - addresses:
      - ip: 10.10.0.1
    ports:
      - name: https-foo
        port: 8443
  - addresses:
      - ip: 10.21.0.1
    ports:
      - name: https-foo
        port: 8443

---
kind: EndpointSlice
apiVersion: discovery.k8s.io/v1
metadata:
  name: service1-abc
  namespace: testing
  labels:
    kubernetes.io/service-name: service1

addressType: IPv4
ports:
  - name: https-foo
    port: 8443
endpoints:
  - addresses:
      - 10.10.0.1
      - 10.21.0.1
    conditions:
      ready: true
